Fix TOC vertical misalignment

--- a/src/components/StatusDashboard/styles.module.css
+++ b/src/components/StatusDashboard/styles.module.css
@@ -20,8 +20,8 @@
 }
 
 .toc_anchor {
-  display: 'block';
-  position: 'relative';
-  top: -50;
-  visibility: 'hidden';
+  display: block;
+  position: relative;
+  top: -100px;
+  visibility: hidden;
 }
